<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundTmp2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:background="@color/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarProfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


            <ImageView
                android:id="@+id/profilImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnProfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/mainBackgroundGreen"
                        android:text="@string/button_change_profil"
                        android:textAllCaps="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnSaveData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/mainBackgroundGreen"
                        android:text="@string/button_save_data"
                        android:onClick="btnClick"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_name"
                android:inputType="textPersonName"
                android:textColor="@color/textColorNotActive"
                android:textColorHint="@color/textColorNotActive"
                android:theme="@style/MyEditTextStyle"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_user_name"
                android:inputType="textPersonName"
                android:textColor="@color/textColorNotActive"
                android:textColorHint="@color/textColorNotActive"
                android:theme="@style/MyEditTextStyle" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_birth_date"
                android:inputType="date"
                android:textColor="@color/textColorNotActive"
                android:textColorHint="@color/textColorNotActive"
                android:theme="@style/MyEditTextStyle"/>

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_city"
                android:inputType="text"
                android:textColor="@color/textColorNotActive"
                android:textColorHint="@color/textColorNotActive"
                android:theme="@style/MyEditTextStyle"/>

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColorNotActive"
                android:textColorHint="@color/textColorNotActive"
                android:theme="@style/MyEditTextStyle" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:textColor="@color/textColorNotActive"
                android:textColorHint="@color/textColorNotActive"
                android:theme="@style/MyEditTextStyle" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>